made the header shared

--- a/shared/header.html
+++ b/shared/header.html
@@ -1,5 +1,4 @@
 <div class="site-navbar py-2">
-
   <div class="search-wrap">
     <div class="container">
       <a href="#" class="search-close js-search-close"><span class="icon-close2"></span></a>
@@ -19,7 +18,7 @@
       <div class="main-nav d-none d-lg-block">
         <nav class="site-navigation text-right text-md-center" role="navigation">
           <ul class="site-menu js-clone-nav d-none d-lg-block">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Store</a></li>
             <li class="has-children">
               <a href="#">Categories</a>
@@ -55,3 +54,17 @@
     </div>
   </div>
 </div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const currentPath = window.location.pathname.split('/').pop();
+    const menuItems = document.querySelectorAll('.site-menu a');
+    menuItems.forEach(item => {
+      if (item.getAttribute('href') === currentPath) {
+        item.parentElement.classList.add('active');
+      } else {
+        item.parentElement.classList.remove('active');
+      }
+    });
+  });
+</script>
