--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,8 @@
         .catch(error => console.error('Error loading header:', error));
     </script>
 
-    <div class="bg-light py-3">
+    <!-- Remove the breadcrumb navigation -->
+    <!-- <div class="bg-light py-3">
       <div class="container">
         <div class="row">
           <div class="col-md-12 mb-0">
@@ -53,7 +54,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="site-section">
       <div class="container">
