--- a/shop.html
+++ b/shop.html
@@ -45,13 +45,14 @@
         .catch(error => console.error('Error loading header:', error));
     </script>
 
-    <div class="bg-light py-3">
+    <!-- Remove the breadcrumb navigation -->
+    <!-- <div class="bg-light py-3">
       <div class="container">
         <div class="row">
           <div class="col-md-12 mb-0"><a href="index.html">Home</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Store</strong></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="site-section">
       <div class="container">
