added the shared header into shop single

--- a/shared/header.html
+++ b/shared/header.html
@@ -1,4 +1,4 @@
-<div class="site-navbar py-2">
+<div class="site-navbar py-2" style="background-color: rgb(0, 195, 255);">
   <div class="search-wrap">
     <div class="container">
       <a href="#" class="search-close js-search-close"><span class="icon-close2"></span></a>
