--- a/cart.html
+++ b/cart.html
@@ -307,6 +307,40 @@
   <script src="js/aos.js"></script>
 
   <script src="js/main.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
+      const cartTableBody = document.querySelector('.site-blocks-table tbody');
+
+      function updateCartTable() {
+        cartTableBody.innerHTML = '';
+        cartItems.forEach(item => {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td class="product-thumbnail"><img src="${item.image}" alt="Image" class="img-fluid"></td>
+            <td class="product-name"><h2 class="h5 text-black">${item.name}</h2></td>
+            <td>${item.price}</td>
+            <td>
+              <div class="input-group mb-3" style="max-width: 120px;">
+                <div class="input-group-prepend">
+                  <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
+                </div>
+                <input type="text" class="form-control text-center" value="${item.quantity}" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                <div class="input-group-append">
+                  <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
+                </div>
+              </div>
+            </td>
+            <td>${item.total}</td>
+            <td><a href="#" class="btn btn-primary height-auto btn-sm">X</a></td>
+          `;
+          cartTableBody.appendChild(row);
+        });
+      }
+
+      updateCartTable();
+    });
+  </script>
 
 </body>
 
