--- a/shop-single.html
+++ b/shop-single.html
@@ -262,6 +262,22 @@
       if (imgSrc) {
         document.getElementById('product-image').src = imgSrc;
       }
+
+      document.querySelector('.buy-now').addEventListener('click', function(event) {
+        event.preventDefault();
+        const product = {
+          image: document.getElementById('product-image').src,
+          name: document.querySelector('.text-black').innerText,
+          price: document.querySelector('.text-primary.h4').innerText,
+          quantity: document.querySelector('.form-control.text-center').value,
+          total: document.querySelector('.text-primary.h4').innerText
+        };
+
+        let cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
+        cartItems.push(product);
+        localStorage.setItem('cartItems', JSON.stringify(cartItems));
+        alert('Product added to cart!');
+      });
     });
   </script>
 
