--- a/shared/header.html
+++ b/shared/header.html
@@ -47,7 +47,7 @@
         <a href="#" class="icons-btn d-inline-block js-search-open"><span class="icon-search"></span></a>
         <a href="cart.html" class="icons-btn d-inline-block bag">
           <span class="icon-shopping-bag"></span>
-          <span class="number">2</span>
+          <span class="number" id="cart-count">0</span>
         </a>
         <a href="#" class="site-menu-toggle js-menu-toggle ml-3 d-inline-block d-lg-none"><span class="icon-menu"></span></a>
       </div>
@@ -66,5 +66,8 @@
         item.parentElement.classList.remove('active');
       }
     });
+
+    const cartItems = JSON.parse(localStorage.getItem('cartItems')) || [];
+    document.getElementById('cart-count').textContent = cartItems.length;
   });
 </script>
