--- a/shop.html
+++ b/shop.html
@@ -87,9 +87,15 @@
             const item = document.createElement('div');
             item.className = 'col-sm-6 col-lg-4 text-center item mb-4';
             item.innerHTML = `
-              <a href="shop-single.html?img=${medicament.image}"> <img src="${medicament.image}" alt="Image"></a>
-              <h3 class="text-dark"><a href="shop-single.html?img=${medicament.image}">${medicament.name}</a></h3>
-              <p class="price">$${medicament.price.toFixed(2)}</p>
+              <div class="card shadow-sm" style="border-radius: 10px; overflow: hidden;">
+                <a href="shop-single.html?img=${medicament.image}&name=${encodeURIComponent(medicament.name)}&price=${medicament.price.toFixed(2)}&description=${encodeURIComponent(medicament.description)}">
+                  <img src="${medicament.image}" class="card-img-top" alt="${medicament.name}" style="height: 200px; object-fit: cover;">
+                </a>
+                <div class="card-body">
+                  <h5 class="card-title"><a href="shop-single.html?img=${medicament.image}&name=${encodeURIComponent(medicament.name)}&price=${medicament.price.toFixed(2)}&description=${encodeURIComponent(medicament.description)}" class="text-dark">${medicament.name}</a></h5>
+                  <p class="card-text text-primary font-weight-bold">$${medicament.price.toFixed(2)}</p>
+                </div>
+              </div>
             `;
             container.appendChild(item);
           });
