--- a/login.html
+++ b/login.html
@@ -1,88 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login - Biopharm</title>
-    <!-- ...existing header code... -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup - Biopharm</title>
     <style>
-        .login-section {
-            min-height: 80vh;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
             display: flex;
+            justify-content: center;
             align-items: center;
+            height: 100vh;
+            margin: 0;
         }
         .login-container {
             background: white;
+            padding: 3rem;
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.1);
-            padding: 2rem;
-        }
-        .form-title {
-            color: #51eaea;
-            margin-bottom: 2rem;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 350px;
             text-align: center;
         }
-        .forgot-password {
-            text-align: right;
-            margin-bottom: 1rem;
+        h1 {
+            color: #2c3e50;
         }
-        .signup-link {
-            text-align: center;
-            margin-top: 1rem;
+        h2 {
+            color: #3498db;
+        }
+        label {
+            display: block;
+            text-align: left;
+            margin-top: 10px;
+            font-weight: bold;
+        }
+        input, select, textarea {
+            width: 100%;
+            padding: 0.75rem;
+            margin: 0.5rem 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        textarea {
+            height: 60px;
+            resize: none;
+        }
+        button {
+            background-color: #3498db;
+            color: white;
+            border: none;
+            padding: 0.75rem;
+            width: 100%;
+            margin: 1.5rem 0 0.5rem 0;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #2980b9;
         }
     </style>
 </head>
 <body>
-    <div class="site-wrap">
-        <div id="header"></div>
-        
-        <div class="login-section">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-5">
-                        <div class="login-container">
-                            <h2 class="form-title">Welcome Back</h2>
-                            <form id="loginForm" onsubmit="return handleLogin(event)">
-                                <div class="form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" class="form-control" id="email" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="password" required>
-                                </div>
-                                <div class="forgot-password">
-                                    <a href="#" class="text-primary">Forgot Password?</a>
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
-                                <div class="signup-link">
-                                    Don't have an account? <a href="signup.html" class="text-primary">Sign Up</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+    <div class="login-container">
+        <h1>Biopharm</h1>
+        <h2>Login</h2>
+        <form action="/login" method="POST">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Your email" required>
             </div>
-        </div>
 
-        <!-- ...existing footer code... -->
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Your password" required>
+            </div>
+
+            <button type="submit">Login</button>
+            <div class="signup-link">
+                Don't have an account? <a href="signup.html">Sign Up</a>
+            </div>
+        </form>
     </div>
-
-    <!-- ...existing scripts... -->
-    <script>
-        function handleLogin(event) {
-            event.preventDefault();
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            // Here you would typically make an API call to verify credentials
-            // For demo purposes, we'll just store in localStorage
-            const mockUser = {
-                email: email,
-                firstName: 'Demo',
-                lastName: 'User'
-            };
-            localStorage.setItem('user', JSON.stringify(mockUser));
-            window.location.href = 'index.html';
-        }
-    </script>
 </body>
 </html>
