the categories are working

--- a/shared/header.html
+++ b/shared/header.html
@@ -23,13 +23,13 @@
             <li class="has-children">
               <a href="#">Categories</a>
               <ul class="dropdown">
-                <li><a href="#">Cardiovasculaire et métabolisme</a></li>
-                <li><a href="#">Dermatologie</a></li>
-                <li><a href="#">Diabétologie</a></li>
-                <li><a href="#">Gastrologie</a></li>
-                <li><a href="#">Pneumo-allergologie</a></li>
-                <li><a href="#">Psychiatrie</a></li>
-                <li><a href="#">Rhumatologie</a></li>
+                <li><a href="shop.html?category=Cardiovasculaire%20et%20métabolisme">Cardiovasculaire et métabolisme</a></li>
+                <li><a href="shop.html?category=Dermatologie">Dermatologie</a></li>
+                <li><a href="shop.html?category=Diabétologie">Diabétologie</a></li>
+                <li><a href="shop.html?category=Gastrologie">Gastrologie</a></li>
+                <li><a href="shop.html?category=Pneumo-allergologie">Pneumo-allergologie</a></li>
+                <li><a href="shop.html?category=Psychiatrie">Psychiatrie</a></li>
+                <li><a href="shop.html?category=Rhumatologie">Rhumatologie</a></li>
               </ul>
             </li>
             <li><a href="about.html">About</a></li>
