--- a/cart.html
+++ b/cart.html
@@ -111,7 +111,7 @@
     
                 <div class="row">
                   <div class="col-md-12">
-                    <button class="btn btn-primary btn-lg btn-block" onclick="window.location='checkout.html'">Proceed To
+                    <button class="btn btn-primary btn-lg btn-block" onclick="window.location='thankyou.html'">Proceed To
                       Checkout</button>
                   </div>
                 </div>
