--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="css/aos.css">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">+
 
 </head>
 
